# race-engineer

./: .gitignore  Projeto-Final.docx  README.md  dataset.py  experiment.ipynb  extract_hyperparameters.py  method6_detailed_results_20250914_015102.csv  tyre_pred_ideas.md
Entregas_IA/1_Bimestre/: Modelo preditivo para estratégia de pneus na Fórmula 1.docx
analysis/: method6.ipynb
data/: stints_2019-2024.csv  stints_2019-2025.csv  stints_data_2019.csv  stints_data_2020.csv  stints_data_2021.csv  stints_data_2022.csv  stints_data_2023.csv  stints_data_2024.csv  stints_data_2025.csv
data/old/: stints_data_2023.csv
experiments/: RF_model.ipynb  dataset.ipynb  method2.py  method6.py  simple_model.ipynb  transform_dataset.ipynb
race-engineer/: pyproject.toml
